# backend/api/gen/go/app/service/v1/i_inventory.pb.go
@@ -35,11 +35,13 @@ const file_app_service_v1_i_inventory_proto_rawDesc = "" +
 	"\x10InventoryService\x12k\n" +
 	"\x04List\x12\x19.pagination.PagingRequest\x1a+.inventory.service.v1.ListInventoryResponse\"\x1b\x82\xd3\xe4\x93\x02\x15\x12\x13/app/v1/inventories\x12s\n" +
 	"\x03Get\x12).inventory.service.v1.GetInventoryRequest\x1a\x1f.inventory.service.v1.Inventory\" \x82\xd3\xe4\x93\x02\x1a\x12\x18/app/v1/inventories/{id}\x12\x8f\x01\n" +
-	"\vGetOverview\x121.inventory.service.v1.GetInventoryOverviewRequest\x1a'.inventory.service.v1.InventoryOverview\"$\x82\xd3\xe4\x93\x02\x1e\x12\x1c/app/v1/inventories:overview2\x84\x03\n" +
+	"\vGetOverview\x121.inventory.service.v1.GetInventoryOverviewRequest\x1a'.inventory.service.v1.InventoryOverview\"$\x82\xd3\xe4\x93\x02\x1e\x12\x1c/app/v1/inventories:overview2\x84\x05\n" +
 	"\x14StockMovementService\x12s\n" +
 	"\x04List\x12\x19.pagination.PagingRequest\x1a/.inventory.service.v1.ListStockMovementResponse\"\x1f\x82\xd3\xe4\x93\x02\x19\x12\x17/app/v1/stock-movements\x12\x7f\n" +
 	"\x03Get\x12-.inventory.service.v1.GetStockMovementRequest\x1a#.inventory.service.v1.StockMovement\"$\x82\xd3\xe4\x93\x02\x1e\x12\x1c/app/v1/stock-movements/{id}\x12v\n" +
-	"\x06Create\x120.inventory.service.v1.CreateStockMovementRequest\x1a\x16.google.protobuf.Empty\"\"\x82\xd3\xe4\x93\x02\x1c:\x01*\"\x17/app/v1/stock-movementsB\xac\x01\n" +
+	"\x06Create\x120.inventory.service.v1.CreateStockMovementRequest\x1a\x16.google.protobuf.Empty\"\"\x82\xd3\xe4\x93\x02\x1c:\x01*\"\x17/app/v1/stock-movements\x12\x80\x01\n" +
+	"\aReverse\x121.inventory.service.v1.ReverseStockMovementRequest\x1a\x16.google.protobuf.Empty\"*\x82\xd3\xe4\x93\x02$:\x01*\"\x1f/app/v1/stock-movements:reverse\x12{\n" +
+	"\bTransfer\x12*.inventory.service.v1.TransferStockRequest\x1a\x16.google.protobuf.Empty\"+\x82\xd3\xe4\x93\x02%:\x01*\" /app/v1/stock-movements:transferB\xac\x01\n" +
 	"\x12com.app.service.v1B\x0fIInventoryProtoP\x01Z+go-wind-erp/api/gen/go/app/service/v1;apppb\xa2\x02\x03ASX\xaa\x02\x0eApp.Service.V1\xca\x02\x0eApp\\Service\\V1\xe2\x02\x1aApp\\Service\\V1\\GPBMetadata\xea\x02\x10App::Service::V1b\x06proto3"
 
 var file_app_service_v1_i_inventory_proto_goTypes = []any{
@@ -49,14 +51,16 @@ var file_app_service_v1_i_inventory_proto_goTypes = []any{
 	(*v11.GetInventoryOverviewRequest)(nil), // 3: inventory.service.v1.GetInventoryOverviewRequest
 	(*v11.GetStockMovementRequest)(nil),     // 4: inventory.service.v1.GetStockMovementRequest
 	(*v11.CreateStockMovementRequest)(nil),  // 5: inventory.service.v1.CreateStockMovementRequest
-	(*v11.ListWarehouseResponse)(nil),       // 6: inventory.service.v1.ListWarehouseResponse
-	(*v11.Warehouse)(nil),                   // 7: inventory.service.v1.Warehouse
-	(*v11.ListInventoryResponse)(nil),       // 8: inventory.service.v1.ListInventoryResponse
-	(*v11.Inventory)(nil),                   // 9: inventory.service.v1.Inventory
-	(*v11.InventoryOverview)(nil),           // 10: inventory.service.v1.InventoryOverview
-	(*v11.ListStockMovementResponse)(nil),   // 11: inventory.service.v1.ListStockMovementResponse
-	(*v11.StockMovement)(nil),               // 12: inventory.service.v1.StockMovement
-	(*emptypb.Empty)(nil),                   // 13: google.protobuf.Empty
+	(*v11.ReverseStockMovementRequest)(nil), // 6: inventory.service.v1.ReverseStockMovementRequest
+	(*v11.TransferStockRequest)(nil),        // 7: inventory.service.v1.TransferStockRequest
+	(*v11.ListWarehouseResponse)(nil),       // 8: inventory.service.v1.ListWarehouseResponse
+	(*v11.Warehouse)(nil),                   // 9: inventory.service.v1.Warehouse
+	(*v11.ListInventoryResponse)(nil),       // 10: inventory.service.v1.ListInventoryResponse
+	(*v11.Inventory)(nil),                   // 11: inventory.service.v1.Inventory
+	(*v11.InventoryOverview)(nil),           // 12: inventory.service.v1.InventoryOverview
+	(*v11.ListStockMovementResponse)(nil),   // 13: inventory.service.v1.ListStockMovementResponse
+	(*v11.StockMovement)(nil),               // 14: inventory.service.v1.StockMovement
+	(*emptypb.Empty)(nil),                   // 15: google.protobuf.Empty
 }
 var file_app_service_v1_i_inventory_proto_depIdxs = []int32{
 	0,  // 0: app.service.v1.WarehouseService.List:input_type -> pagination.PagingRequest
@@ -67,16 +71,20 @@ var file_app_service_v1_i_inventory_proto_depIdxs = []int32{
 	0,  // 5: app.service.v1.StockMovementService.List:input_type -> pagination.PagingRequest
 	4,  // 6: app.service.v1.StockMovementService.Get:input_type -> inventory.service.v1.GetStockMovementRequest
 	5,  // 7: app.service.v1.StockMovementService.Create:input_type -> inventory.service.v1.CreateStockMovementRequest
-	6,  // 8: app.service.v1.WarehouseService.List:output_type -> inventory.service.v1.ListWarehouseResponse
-	7,  // 9: app.service.v1.WarehouseService.Get:output_type -> inventory.service.v1.Warehouse
-	8,  // 10: app.service.v1.InventoryService.List:output_type -> inventory.service.v1.ListInventoryResponse
-	9,  // 11: app.service.v1.InventoryService.Get:output_type -> inventory.service.v1.Inventory
-	10, // 12: app.service.v1.InventoryService.GetOverview:output_type -> inventory.service.v1.InventoryOverview
-	11, // 13: app.service.v1.StockMovementService.List:output_type -> inventory.service.v1.ListStockMovementResponse
-	12, // 14: app.service.v1.StockMovementService.Get:output_type -> inventory.service.v1.StockMovement
-	13, // 15: app.service.v1.StockMovementService.Create:output_type -> google.protobuf.Empty
-	8,  // [8:16] is the sub-list for method output_type
-	0,  // [0:8] is the sub-list for method input_type
+	6,  // 8: app.service.v1.StockMovementService.Reverse:input_type -> inventory.service.v1.ReverseStockMovementRequest
+	7,  // 9: app.service.v1.StockMovementService.Transfer:input_type -> inventory.service.v1.TransferStockRequest
+	8,  // 10: app.service.v1.WarehouseService.List:output_type -> inventory.service.v1.ListWarehouseResponse
+	9,  // 11: app.service.v1.WarehouseService.Get:output_type -> inventory.service.v1.Warehouse
+	10, // 12: app.service.v1.InventoryService.List:output_type -> inventory.service.v1.ListInventoryResponse
+	11, // 13: app.service.v1.InventoryService.Get:output_type -> inventory.service.v1.Inventory
+	12, // 14: app.service.v1.InventoryService.GetOverview:output_type -> inventory.service.v1.InventoryOverview
+	13, // 15: app.service.v1.StockMovementService.List:output_type -> inventory.service.v1.ListStockMovementResponse
+	14, // 16: app.service.v1.StockMovementService.Get:output_type -> inventory.service.v1.StockMovement
+	15, // 17: app.service.v1.StockMovementService.Create:output_type -> google.protobuf.Empty
+	15, // 18: app.service.v1.StockMovementService.Reverse:output_type -> google.protobuf.Empty
+	15, // 19: app.service.v1.StockMovementService.Transfer:output_type -> google.protobuf.Empty
+	10, // [10:20] is the sub-list for method output_type
+	0,  // [0:10] is the sub-list for method input_type
 	0,  // [0:0] is the sub-list for extension type_name
 	0,  // [0:0] is the sub-list for extension extendee
 	0,  // [0:0] is the sub-list for field type_name
